--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ MONGO_DSN=mongodb://root:root@db/analytics?authSource=admin
 
 REDIS_HOST=redis
 REDIS_PORT=6379
+
+
+
+NEXT_HOST=http://localhost:3001
